--- a/frontend/src/sass/components/_register.scss
+++ b/frontend/src/sass/components/_register.scss
@@ -1,7 +1,11 @@
 .register {
   width: 100%;
   height: 100vh;
-  background-color: #fbc531;
+  background-image: linear-gradient(
+    to bottom right,
+    rgba(236, 204, 104, 1),
+    rgba(236, 204, 104, 0.6)
+  );
   display: flex;
   justify-content: center;
   align-items: center;
