--- a/frontend/src/sass/utils/_utils.scss
+++ b/frontend/src/sass/utils/_utils.scss
@@ -1,8 +1,8 @@
 .card {
   width: 375px;
   padding: 15px 20px;
-  background-color: #7f8fa6;
-  box-shadow: 0px 8px 25px #7f8fa6;
+  background-color: #a4b0be;
+  box-shadow: 8px 8px 36px #747d8c;
 }
 
 .form-group {
@@ -15,7 +15,7 @@
   padding: 12px;
   border: none;
   outline: none;
-  background-color: #0a0e1585;
+  background-color: #57606f;
   &::placeholder {
     color: #fff;
     font-weight: 400;
@@ -34,7 +34,7 @@ label {
   text-transform: uppercase;
   padding: 12px;
   text-align: center;
-  background-color: #0a0e1585;
+  background-color: #57606f;
   border: none;
   cursor: pointer;
 }
